DIS-322 fix horizontal scroll

--- a/ui.apps/sass/partials/_articleShowcase.scss
+++ b/ui.apps/sass/partials/_articleShowcase.scss
@@ -6,8 +6,6 @@
     border-left: 2px solid #DD3741;
   }
   .article-cards {
-    overflow: hidden;
-    white-space: nowrap;
     display: flex;
     gap: 36px;
   }
